[package]
name = "GOAP"
version = "0.1.0"
authors = ["Sam Macaluso <sam@macalu.so>"]
edition = "2018"
description = "A Goal-Oriented Action Planning framework crate"
repository = "https://github.com/oonis/GOAP"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
